properties file added

--- a/project.properties
+++ b/project.properties
@@ -7,6 +7,9 @@ day	   -> di [d1,d2,d3,d4,d5,d6]
 studentListMap = {cid:[sid]}
 courseFacultyListMap = {cid:[fid]}
 timeTableSchedule = {(si,di,rid):cid}
-
+roomNumberList = [rid]
+timeSlotsList = [si]
+courseList = [cid]
+dayList = [di]
 globalScheduleMap ={timeTableSchedule:fitness}
 
